--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -933,7 +933,7 @@
                             <div class="col-lg-8"></div>
                             <div class="col-lg-2">
                                 <a [ngStyle]="{'visibility':phase.PDFExists?'visible':'collapse'}" class="aPackagePDF"
-                                    href="https://sd360.sunrisedataservices.com/api/LoadPDF?PhaseID={{phase.ID}}"
+                                    href="https://example.com/api/LoadPDF?PhaseID={{phase.ID}}"
                                     target="_blank">Package PDF</a>
                             </div>
                             <div class="col-lg-2">
